--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	runtimeOnly 'org.postgresql:postgresql'
+	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
