--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'org.hibernate:hibernate-core:6.3.1.Final'
+	implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation 'org.springframework:spring-tx:6.0.11'
+
+
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
 
-//	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
