delete TODO update CheckCommonPasswordCommand.java

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.mindrot:jbcrypt:0.4'
+	compileOnly 'org.projectlombok:lombok:1.18.30'
 	implementation 'org.apache.commons:commons-lang3:3.13.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
