connect to DB in BeansConfiguration class with using env

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	implementation 'org.springframework:spring-tx:6.0.11'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 
 	annotationProcessor 'org.projectlombok:lombok'
