--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,10 @@ dependencies {
 	// Database
 	implementation 'org.hibernate:hibernate-core:6.3.1.Final'
 	implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
-	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	implementation 'org.springframework:spring-tx:6.0.11'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
