add encrypt by user password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-server.port=8081
+server.port=8443
+server.ssl.key-store=keystore.jks
+server.ssl.key-store-password=passw0rd
+server.ssl.key-password=passw0rd
